force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/CEC_Country_Context_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CEC Country Context Mapping</label>
    <pluralLabel>CEC Country Context Mappings</pluralLabel>
</CustomObject>