force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_City__c.field-meta.xml
<CustomField>
    <fullName>CEC_City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>City</label>
    <type>Checkbox</type>
</CustomField>