force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_Context__c.field-meta.xml
<CustomField>
    <fullName>CEC_Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Account Business</fullName>
                <default>true</default>
                <label>Non-Account Business</label>
            </value>
            <value>
                <fullName>Assistance Required</fullName>
            </value>
            <value>
                <fullName>Third-Party Auditor</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>