force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_Country_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CEC_Country_Mapping__c</fullName>
    <label>CEC Country Mapping</label>
    <referenceTo>CEC_Country_Mapping__mdt</referenceTo>
    <relationshipLabel>CEC Country Context Mappings</relationshipLabel>
    <relationshipName>CEC_Country_Context_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>