force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CEC_PostalCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostalCode</label>
    <type>Checkbox</type>
</CustomField>