force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_State__c.field-meta.xml
<CustomField>
    <fullName>CEC_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State</label>
    <type>Checkbox</type>
</CustomField>