force-app/main/default/objects/CEC_Country_Context_Mapping__mdt/fields/CEC_Street__c.field-meta.xml
<CustomField>
    <fullName>CEC_Street__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Street</label>
    <type>Checkbox</type>
</CustomField>